Bug 369572 - Regression kMail 5.3.1 QtWebEngine: HTML mail printing not possible if plain text view is preferred over HTML

FIXED-IN: 5.3.3
BUG: 369572