messageviewer/src/viewer/viewer_p.cpp
@@ -1265,7 +1265,6 @@ void ViewerPrivate::resetStateForNewMessage()
     mViewerPluginToolManager->closeAllTools();
     mScamDetectionWarning->setVisible(false);
     mOpenAttachmentFolderWidget->setVisible(false);
-    mDisplayFormatMessageOverwrite = (mDisplayFormatMessageOverwrite == MessageViewer::Viewer::UseGlobalSetting) ? MessageViewer::Viewer::UseGlobalSetting : MessageViewer::Viewer::Unknown;
 
     if (mPrinting) {
         if (MessageViewer::MessageViewerSettings::self()->respectExpandCollapseSettings()) {
@@ -1277,6 +1276,8 @@ void ViewerPrivate::resetStateForNewMessage()
         } else {
             mLevelQuote = -1;
         }
+    } else {
+        mDisplayFormatMessageOverwrite = (mDisplayFormatMessageOverwrite == MessageViewer::Viewer::UseGlobalSetting) ? MessageViewer::Viewer::UseGlobalSetting : MessageViewer::Viewer::Unknown;
     }
 }
 
